RNN на электрическом датасете

--- a/algorithms_research/RNN_for_electricity.ipynb
+++ b/algorithms_research/RNN_for_electricity.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -706,16 +705,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/zemld/TimeseriesHSE/blob/main/algorithms_research/RNN_for_electricity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -723,7 +712,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PR-Oh_qQCAqk",
-        "outputId": "b7fd8f7d-ac19-4020-90d6-ec9efda4f07f"
+        "outputId": "b7fd8f7d-ac19-4020-90d6-ec9efda4f07f",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -982,7 +972,8 @@
           "height": 512
         },
         "id": "v22-ZPhcCDnM",
-        "outputId": "438b0ec9-e223-4d39-df14-d55faa28534e"
+        "outputId": "438b0ec9-e223-4d39-df14-d55faa28534e",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -1064,7 +1055,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aWtyXXcaChYS",
-        "outputId": "0e2b408e-783a-49b0-82f3-de81f6faa145"
+        "outputId": "0e2b408e-783a-49b0-82f3-de81f6faa145",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -1644,7 +1636,8 @@
           ]
         },
         "id": "Wyy4eT-bGAGk",
-        "outputId": "3e0a19eb-f9fc-49e3-8092-7d07494c0741"
+        "outputId": "3e0a19eb-f9fc-49e3-8092-7d07494c0741",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -1740,7 +1733,8 @@
           ]
         },
         "id": "kK3QnfMEGvq3",
-        "outputId": "8cb615b3-5a38-4e5b-a7a0-01d11d947197"
+        "outputId": "8cb615b3-5a38-4e5b-a7a0-01d11d947197",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -1824,15 +1818,14 @@
         "    actual.end_time()\n",
         ").values().flatten()\n",
         "y_pred = forecast.values().flatten()\n",
-        "y_pred\n",
         "# Метрики\n",
-        "# mae = mean_absolute_error(y_true, y_pred)\n",
-        "# rmse = np.sqrt(mean_squared_error(y_true, y_pred))\n",
-        "# mape = np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
+        "mae = mean_absolute_error(y_true, y_pred)\n",
+        "rmse = np.sqrt(mean_squared_error(y_true, y_pred))\n",
+        "mape = np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
         "\n",
-        "# print(f\"MAE  = {mae:.4f}\")\n",
-        "# print(f\"RMSE = {rmse:.4f}\")\n",
-        "# print(f\"MAPE = {mape:.2f}%\")"
+        "print(f\"MAE  = {mae:.4f}\")\n",
+        "print(f\"RMSE = {rmse:.4f}\")\n",
+        "print(f\"MAPE = {mape:.2f}%\")"
       ],
       "metadata": {
         "colab": {
@@ -1856,76 +1849,6 @@
           },
           "metadata": {},
           "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_true"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d-FHJH0NPVW7",
-        "outputId": "40720c81-b8e0-4335-e8b3-f17c4924e8fd"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0.4221    , 0.3531    , 0.30346667, 0.28966667, 0.26636667,\n",
-              "       0.33573333, 0.37706667, 0.88053333, 0.9632    , 2.62713333,\n",
-              "       1.6294    , 1.2577    , 0.64546667, 1.02806667, 0.49973333,\n",
-              "       0.35623333, 0.30066667, 0.333     , 0.5418    , 1.4801    ,\n",
-              "       2.2116    , 2.33046667, 1.64783333, 1.34293333, 1.24756667,\n",
-              "       0.957     , 0.2943    , 0.281     , 0.27343333, 0.29836667,\n",
-              "       0.31403333, 0.28256667, 1.00876667, 2.88393333, 1.9993    ,\n",
-              "       1.84996667, 1.35276667, 1.3389    , 1.4902    , 1.61293333,\n",
-              "       1.40776667, 0.87643333, 1.06793333, 1.7259    , 1.57346667,\n",
-              "       1.65933333, 1.1637    , 0.93466667])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_pred"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IQTvTHSwPgpe",
-        "outputId": "fecc5e15-4d7c-42b8-c678-feb5247e27ba"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1.38333083, 1.06396694, 0.72172096, 0.33471699, 0.27829153,\n",
-              "       0.30795749, 0.33217367, 0.45082337, 1.15488262, 2.49182746,\n",
-              "       2.30084399, 1.71289835, 1.52135563, 1.38408279, 0.92730098,\n",
-              "       0.53289464, 0.57075906, 0.6777698 , 0.58200237, 0.57950267,\n",
-              "       0.55806757, 2.46294296, 3.21494767, 1.92467163, 0.87275992,\n",
-              "       0.50373926, 0.38975795, 0.30852756, 0.4036061 , 0.5622764 ,\n",
-              "       0.73317406, 0.46940878, 1.11660028, 1.49371378, 1.6577903 ,\n",
-              "       1.94028576, 1.56532756, 1.7089217 , 1.45856599, 1.06506073,\n",
-              "       1.03686357, 0.60416807, 0.57929769, 0.70635731, 1.18143404,\n",
-              "       1.92337133, 1.89335003, 1.79406395])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 44
         }
       ]
     }
